Fixeg size of gallery on mobile devices.

--- a/style.css
+++ b/style.css
@@ -99,10 +99,6 @@ ul {
     background-image: linear-gradient(to top,  #e85a4f 98%, #eae7dc);
 }
 
-#gallery {
-    min-width: 100vh;
-}
-
 #gallery h1 {
     position: static;
     text-align: center;
@@ -153,10 +149,10 @@ ul {
     /* display: inline-block; */
     position: fixed;
     z-index: 3;
-    top: 5%;
-    left: 5%;
-    width: 90%;
-    height: 90%;
+    /* top: 5%;
+    left: 5%; */
+    width: 100%;
+    height: 100%;
     text-align: center;
     background-color: rgba(234,231,220, 0.8);
 }
@@ -164,7 +160,8 @@ ul {
 .zoom {
     position: relative;
     margin: 5vh auto;
-    height: 80vh;
+    max-width: 90vw;
+    max-height: 80vh;
     object-fit: cover;
 }
 
@@ -373,7 +370,7 @@ ul {
 
 /* MEDIA */
 /* mobile first */
-@media screen and (min-width: 600px) {
+@media screen and (min-width: 550px) {
 
     h1 {
         position: absolute;
@@ -392,6 +389,10 @@ ul {
 
     #description {
         padding: 2em;
+    }
+
+    .break-line {
+        margin-bottom: 3rem;
     }
     
     .gallery-container {
@@ -455,9 +456,9 @@ ul {
         padding-left: 0;
     }
 
-
-    .break-line {
-        margin-bottom: 3rem;
+    .pop-up {
+        top: 0;
+        left: 0;
     }
 
     .services {
@@ -515,9 +516,15 @@ ul {
     .service-desc.reverted {
         left: 27.5vw;
     }
+
+    .zoom {
+        max-width: 90vw;
+        height: 80vh;
+        object-fit: cover;
+    }
 }
 
-@media screen and (min-width: 600px) and (max-width: 800px) {
+@media screen and (min-width: 550px) and (max-width: 800px) {
 
     h1 {
         font-size: 2rem;
@@ -532,6 +539,13 @@ ul {
         width: 45%;
         margin-left: auto;
         margin-right: auto;
+    }
+}
+
+@media screen and (min-width: 800px) {
+
+    #gallery {
+        min-width: 100vh;
     }
 }
 
